Fix styling issue where background color of page is different below scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,6 @@
 html, body {
   margin: 0;
   padding: 0;
-  height: 100%;
   background-color: rgba(211, 211, 211, 0.28);
 }
 
